--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "babel-plugin-styled-components": "^1.12.0",
     "d3": "^7.4.4",
     "d3-flextree": "^2.1.2",
+    "esm": "^3.2.25",
+    "front-matter": "^4.0.2",
     "gatsby": "^3.0.1",
     "gatsby-plugin-baidu-analytics": "^2.2.0",
     "gatsby-plugin-feed": "^3.0.0",
@@ -28,6 +30,7 @@
     "gatsby-remark-responsive-iframe": "^3.0.0",
     "gatsby-remark-smartypants": "^3.0.0",
     "gatsby-source-filesystem": "^3.0.0",
+    "gatsby-source-thirdparty": "^1.0.6",
     "gatsby-transformer-json": "^4.12.1",
     "gatsby-transformer-remark": "^3.0.0",
     "gatsby-transformer-sharp": "^3.0.0",
@@ -50,6 +53,7 @@
     "react-netlify-forms": "^1.2.0",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-raw": "^6.1.1",
+    "remove-markdown": "^0.3.0",
     "styled-components": "^5.2.1",
     "utterances-react": "^0.1.3"
   },
@@ -71,7 +75,7 @@
     "parse": "node listen-parse.jsx",
     "siyuan": "node siyuan.jsx",
     "build": "export NODE_ENV=production && node parse.jsx && gatsby build",
-    "dev": "node parse.jsx && gatsby develop",
+    "dev": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run dev",
     "serve": "gatsby serve",
