--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "markdown-navbar": "^1.4.3",
     "markmap-common": "^0.1.6",
     "mermaid": "^9.0.0",
-    "netlify-cms-app": "^2.14.26",
     "node-noop": "^1.0.0",
     "prismjs": "^1.23.0",
     "react": "^17.0.1",
@@ -41,7 +40,9 @@
     "react-medium-image-zoom": "^4.3.7",
     "react-netlify-forms": "^1.2.0",
     "react-syntax-highlighter": "^15.5.0",
+    "reading-time": "^1.5.0",
     "rehype-raw": "^6.1.1",
+    "remark-gfm": "^3.0.1",
     "remove-markdown": "^0.3.0",
     "styled-components": "^5.2.1",
     "utterances-react": "^0.1.3"
