--- a/.github/workflows/tencentCloud.yml
+++ b/.github/workflows/tencentCloud.yml
@@ -2,7 +2,13 @@ name: CI
 on:
   push:
     branches:
-      - abc
+      - master
+env:
+  VALINE_APPID: ${{ secrets.VALINE_APPID }}
+  VALINE_APPKEY: ${{ secrets.VALINE_APPKEY }}
+  SIYUAN_HOST: ${{ secrets.SIYUAN_HOST }}
+  SIYUAN_TOKEN: ${{ secrets.SIYUAN_TOKEN }}
+  SIYUAN_BOX: ${{ secrets.SIYUAN_BOX }}
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,6 +23,10 @@ jobs:
       - uses: borales/actions-yarn@v2.3.0
         with:
           cmd: build
+  push:
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
       - name: Upload COS
         uses: zkqiang/tencent-cos-action@v0.1.0
         with:
