--- a/.github/workflows/tencentCloud.yml
+++ b/.github/workflows/tencentCloud.yml
@@ -34,7 +34,7 @@ jobs:
         uses: zkqiang/tencent-cos-action@v0.1.0
         with:
           args: upload -r ./public/ /
-          secret_id: ${{ secrets.SECRET_ID }}
-          secret_key: ${{ secrets.SECRET_KEY }}
-          bucket: ${{ secrets.BUCKET }}
-          region: ${{ secrets.REGION }}
+          secret_id: ${{ secrets.COS_SECRET_ID }}
+          secret_key: ${{ secrets.COS_SECRET_KEY }}
+          bucket: ${{ secrets.COS_BUCKET }}
+          region: ${{ secrets.COS_REGION }}
