--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "1.0.0",
   "author": "Yinka Adedire <yinkakun@gmail.com>",
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "antd": "^4.20.1",
     "babel-plugin-styled-components": "^1.12.0",
     "d3": "^7.4.4",
