--- a/.github/workflows/tencentCloud.yml
+++ b/.github/workflows/tencentCloud.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Upload COS
         uses: zkqiang/tencent-cos-action@v0.1.0
         with:
-          args: upload -r ./public/ /
+          args: delete -r -f / && upload -r ./public/ /
           secret_id: ${{ secrets.COS_SECRET_ID }}
           secret_key: ${{ secrets.COS_SECRET_KEY }}
           bucket: ${{ secrets.COS_BUCKET }}
