--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-google-tagmanager": "3.0.0",
     "gatsby-plugin-image": "^1.0.0",
+    "gatsby-plugin-less": "4.0.0",
     "gatsby-plugin-manifest": "^3.0.0",
     "gatsby-plugin-react-helmet": "^4.0.0",
     "gatsby-plugin-sitemap": "3.3.0",
@@ -33,6 +34,7 @@
     "prismjs": "^1.23.0",
     "react": "^17.0.1",
     "react-copy-to-clipboard": "^5.1.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^17.0.1",
     "react-dom-confetti": "^0.2.0",
     "react-helmet": "^6.1.0",
@@ -46,6 +48,7 @@
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
     "remove-markdown": "^0.3.0",
+    "sharp": "^0.30.4",
     "styled-components": "^5.2.1",
     "utterances-react": "^0.1.3"
   },
