--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "gatsby-source-filesystem": "^3.0.0",
     "gatsby-source-thirdparty": "^1.0.6",
     "isomorphic-fetch": "^3.0.0",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
     "markdown-navbar": "^1.4.3",
     "markmap-common": "^0.1.6",
     "mermaid": "^9.0.0",
@@ -53,6 +55,11 @@
     "utterances-react": "^0.1.3"
   },
   "devDependencies": {
+    "css-loader": "^5.0.0",
+    "postcss": "^8.1.10",
+    "postcss-import": "^13.0.0",
+    "postcss-loader": "^4.1.0",
+    "postcss-url": "^10.1.1",
     "prettier": "2.2.1",
     "watch": "^1.0.2"
   },
