--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-glass",
+  "name": "blog_gatsby",
   "private": true,
-  "description": "A minimal & beautiful gatsby personal blog starter with a nice glassmorphism UI.",
+  "description": "blog_gatsby",
   "version": "1.0.0",
-  "author": "Yinka Adedire <yinkakun@gmail.com>",
+  "author": "tianzeng <i@ztianzeng.com>",
   "dependencies": {
     "@reach/router": "^1.3.4",
     "antd": "^4.20.1",
@@ -12,19 +12,19 @@
     "d3-flextree": "^2.1.2",
     "esm": "^3.2.25",
     "front-matter": "^4.0.2",
-    "gatsby": "^3.0.1",
+    "gatsby": "^4.14.1",
     "gatsby-plugin-baidu-analytics": "^2.2.0",
     "gatsby-plugin-google-analytics": "^4.12.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-google-tagmanager": "3.0.0",
-    "gatsby-plugin-image": "^1.0.0",
-    "gatsby-plugin-less": "4.0.0",
-    "gatsby-plugin-manifest": "^3.0.0",
-    "gatsby-plugin-react-helmet": "^4.0.0",
-    "gatsby-plugin-sitemap": "3.3.0",
-    "gatsby-plugin-styled-components": "^4.0.0",
+    "gatsby-plugin-google-tagmanager": "^4.14.0",
+    "gatsby-plugin-image": "2.14.1",
+    "gatsby-plugin-less": "6.14.0",
+    "gatsby-plugin-manifest": "4.14.0",
+    "gatsby-plugin-react-helmet": "^5.14.0",
+    "gatsby-plugin-sitemap": "^5.14.0",
+    "gatsby-plugin-styled-components": "5.14.0",
     "gatsby-plugin-valine": "^1.0.2",
-    "gatsby-source-filesystem": "^3.0.0",
+    "gatsby-source-filesystem": "^4.14.0",
     "gatsby-source-thirdparty": "^1.0.6",
     "isomorphic-fetch": "^3.0.0",
     "less": "^4.1.2",
@@ -63,7 +63,7 @@
     "prettier": "2.2.1",
     "watch": "^1.0.2"
   },
-  "homepage": "https://github.com/yinkakun/gatsby-starter-glass#readme",
+  "homepage": "https://github.com/zxcvbnmzsedr/blog_gatsby",
   "keywords": [
     "gatsby",
     "netlify cms"
@@ -71,7 +71,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yinkakun/gatsby-starter-glass.git"
+    "url": "git+https://github.com/zxcvbnmzsedr/blog_gatsby"
   },
   "scripts": {
     "parse": "node listen-parse.jsx",
