--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-manifest": "4.14.0",
     "gatsby-plugin-react-helmet": "^5.14.0",
     "gatsby-plugin-sitemap": "^5.14.0",
+    "gatsby-plugin-split-css": "^2.0.2",
     "gatsby-plugin-styled-components": "5.14.0",
     "gatsby-plugin-valine": "^1.0.2",
     "gatsby-source-filesystem": "^4.14.0",
