--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-google-tagmanager": "^4.14.0",
     "gatsby-plugin-image": "2.14.1",
+    "gatsby-plugin-import": "^2.1.7",
     "gatsby-plugin-less": "6.14.0",
     "gatsby-plugin-manifest": "4.14.0",
     "gatsby-plugin-react-helmet": "^5.14.0",
@@ -57,6 +58,7 @@
     "utterances-react": "^0.1.3"
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.13.5",
     "css-loader": "^5.0.0",
     "postcss": "^8.1.10",
     "postcss-import": "^13.0.0",
