由于思源目前没有提供公网的API 所以目前关闭自动触发，采用手动触发

--- a/.github/workflows/tencentCloud.yml
+++ b/.github/workflows/tencentCloud.yml
@@ -1,9 +1,9 @@
 name: CI
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - master
+#  push:
+#    branches:
+#      - master
 jobs:
   build:
     runs-on: ubuntu-latest
