--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
   "engines": {
     "node": ">=8.0.0"
   },
+  "resolutions": {
+    "@types/react": "16.7.17",
+    "@types/react-dom": "16.0.11"
+  },
   "dependencies": {
     "@babel/core": "7.17.10",
     "@types/react-responsive": "8.0.5",
@@ -78,7 +82,6 @@
     "viml": "github:XadillaX/vscode-language-viml"
   },
   "devDependencies": {
-    "@ddadaal/eslint-config": "^1.3.0",
     "@types/classnames": "2.3.0",
     "@types/history": "4.7.11",
     "@types/luxon": "2.3.2",
@@ -91,6 +94,7 @@
     "@types/styled-components": "5.1.25",
     "@typescript-eslint/eslint-plugin": "5.22.0",
     "@typescript-eslint/parser": "5.22.0",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-styled-components": "2.0.7",
     "eslint": "8.14.0",
     "eslint-plugin-import": "^2.26.0",
