--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "node": ">=8.0.0"
   },
   "resolutions": {
+    "gatsby-plugin-typescript": "4.13.0",
+    "typescript": "4.6.4",
     "@types/react": "16.7.17",
     "@types/react-dom": "16.0.11"
   },
