--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "Kotlin": "github:mathiasfrohlich/vscode-kotlin",
     "bootstrap": "4.6.0",
     "classnames": "2.3.1",
+    "d3": "^7.4.4",
+    "d3-flextree": "^2.1.2",
     "gatsby": "4.13.1",
     "gatsby-plugin-baidu-analytics": "2.2.0",
     "gatsby-plugin-canonical-urls": "4.13.0",
@@ -65,6 +67,8 @@
     "gatsby-transformer-sharp": "4.13.0",
     "gitalk": "1.7.2",
     "luxon": "2.3.2",
+    "markmap-common": "^0.13.4",
+    "markmap-view": "^0.13.5",
     "node-sass": "^6.0.1",
     "normalize.css": "8.0.1",
     "patch-package": "6.4.7",
@@ -76,6 +80,7 @@
     "react-typed-i18n": "2.1.1",
     "reactstrap": "8.10.0",
     "rehype-react": "7.1.1",
+    "remarkable": "^2.0.1",
     "simstate": "3.0.0",
     "styled-components": "5.3.5",
     "styled-normalize": "8.0.7",
