新增插件，以及对table的解析

--- a/package.json
+++ b/package.json
@@ -56,8 +56,9 @@
     "gatsby-plugin-typescript": "4.13.0",
     "gatsby-remark-copy-linked-files": "5.13.0",
     "gatsby-remark-emoji": "0.0.3",
-    "gatsby-remark-images": "6.13.0",
-    "gatsby-remark-images-medium-zoom": "1.7.0",
+    "gatsby-remark-images": "^6.17.0",
+    "gatsby-remark-images-medium-zoom": "^1.7.0",
+    "gatsby-remark-mermaid": "^2.1.0",
     "gatsby-remark-responsive-iframe": "5.13.0",
     "gatsby-remark-smartypants": "5.13.0",
     "gatsby-remark-vscode": "^3.3.1",
@@ -72,6 +73,7 @@
     "node-sass": "^6.0.1",
     "normalize.css": "8.0.1",
     "patch-package": "6.4.7",
+    "puppeteer": "^15.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-helmet": "6.1.0",
