--- a/plugins/gatsby-transformer-siyuan/package.json
+++ b/plugins/gatsby-transformer-siyuan/package.json
@@ -11,6 +11,7 @@
     "@babel/runtime": "^7.15.4",
     "front-matter": "^4.0.2",
     "gatsby-core-utils": "^3.13.0",
+    "gatsby-remark-vscode": "^3.3.1",
     "gray-matter": "^4.0.3",
     "hast-util-raw": "^6.0.2",
     "hast-util-to-html": "^7.1.3",
