--- a/plugins/gatsby-transformer-siyuan/package.json
+++ b/plugins/gatsby-transformer-siyuan/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.15.4",
+    "cheerio": "^1.0.0-rc.12",
     "front-matter": "^4.0.2",
     "gatsby-core-utils": "^3.13.0",
     "gatsby-remark-vscode": "^3.3.1",
